[package]
name = "brie"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
wyhash = "0.5"
bumpalo = { version = "3.10", features = ["allocator_api", "collections", "boxed"] }
hashbrown = { version = "0.12", features = ["bumpalo", "raw"] }
hyperloglogplus = "0.4"
itertools = "0.10"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "bench_all"
harness = false